# AudioTrack-OpenSL

./: README.md  build.gradle
src/androidTest/java/com/flyscale/chapter_4/: ExampleInstrumentedTest.java
src/main/: AndroidManifest.xml
src/main/cpp/: CMakeLists.txt  OpenSLESSoundPlayer.cpp
src/main/cpp/include/: com_flyscale_chapter_4_OpenSLESSoundPlayer.h
src/main/cpp/libcommon/: CommonTools.h  packet_queue.h
src/main/cpp/libmedia/: opensl_es_context.cpp  opensl_es_context.h  opensl_es_util.h  sound_service.cpp  sound_service.h
src/main/cpp/libmusicdecoder/: accompany_decoder.cpp  accompany_decoder.h  accompany_decoder_controller.cpp
src/main/java/com/flyscale/chapter_4/: MainActivity.java  OpenSLESSoundPlayer.java
src/main/res/layout/: activity_main.xml
src/main/res/values/: strings.xml
src/test/java/com/flyscale/chapter_4/: ExampleUnitTest.java
